[workspace]
resolver = "2"
members = ["mei", "examples/build_wasm_bindgen", "examples/file_server"]

[workspace.lints.clippy]
use_self = "deny"
unwrap_used = "deny"
missing_assert_message = "deny"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.production]
inherits = "release"
opt-level = "s"
panic = "unwind"
