[package]
name = "build_wasm_bindgen"
version = "0.1.0"
edition = "2021"

[dependencies]
file_server = { path = "../file_server" }

[dev-dependencies]
greet = { path = "greet" }

[build-dependencies]
mei = { path = "../../mei" }
sailfish = { version = "0.8", default-features = false, features = ["derive"] }

[features]
wasm-opt = []
