[package]
name = "build_wasm_bindgen"
version = "0.1.0"
edition = "2021"

[dependencies]
file_server = { path = "../file_server" }

[dev-dependencies]
greet = { path = "greet" }

[build-dependencies]
askama = { version = "0.12", default-features = false }
mei = { path = "../../mei" }

[features]
wasm-opt = []
